ELS Code/main/default/objects/ELS_Product__c/ELS_Product__c.object-meta.xml
<CustomObject>
    <label>ELS Products</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>ELS Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ELS Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>