ELS Code/main/default/objects/ELS_Product__c/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lazy Days Temp</fullName>
            </value>
            <value>
                <fullName>Marketing Guest</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Sales Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>