ELS Code/main/default/objects/ELS_Product__c/fields/ClientID__c.field-meta.xml
<CustomField>
    <fullName>ClientID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClientID</label>
    <referenceTo>ClientID__c</referenceTo>
    <relationshipLabel>ELS Products</relationshipLabel>
    <relationshipName>ELS_Products</relationshipName>
    <type>Lookup</type>
</CustomField>