ELS Code/main/default/objects/ELS_Product__c/fields/Co_Applicant_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Address_2__c</fullName>
    <label>Co-Applicant Address 2</label>
    <type>TextArea</type>
</CustomField>