ELS Code/main/default/objects/ELS_Product__c/fields/Co_Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Email__c</fullName>
    <label>Co-Applicant Email</label>
    <type>Email</type>
</CustomField>