ELS Code/main/default/objects/ELS_Product__c/fields/Co_Applicant_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Zip_Code__c</fullName>
    <label>Co-Applicant Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>