ELS Code/main/default/objects/ELS_Product__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ELS Products</relationshipLabel>
    <relationshipName>ELS_Products</relationshipName>
    <type>Lookup</type>
</CustomField>