ELS Code/main/default/objects/ELS_Product__c/fields/DG_Delete_Discount_Camping_Free_Trial__c.field-meta.xml
<CustomField>
    <fullName>DG_Delete_Discount_Camping_Free_Trial__c</fullName>
    <formula>If(AND((YEAR( TODAY() ) *12 + MONTH( TODAY() )) - (YEAR(  Purchase_Date__c  ) *12 + MONTH( Purchase_Date__c)) &gt; 24,  OR( RecordType.DeveloperName == &apos;Discount_Camping&apos;,RecordType.DeveloperName == &apos;Free_Trials&apos;) ),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DG_Delete_Discount_Camping_Free_Trial</label>
    <type>Checkbox</type>
</CustomField>