ELS Code/main/default/objects/ELS_Product__c/fields/DG_Delete_Ready_Camp_Go__c.field-meta.xml
<CustomField>
    <fullName>DG_Delete_Ready_Camp_Go__c</fullName>
    <formula>If(AND((YEAR( TODAY() ) *12 + MONTH( TODAY() )) - (YEAR(  Expire_Date__c ) *12 + MONTH( Expire_Date__c)) &gt; 24,RecordType.DeveloperName == &apos;Ready_Camp_Go&apos;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DG_Delete_Ready_Camp_Go</label>
    <type>Checkbox</type>
</CustomField>