ELS Code/main/default/objects/ELS_Product__c/fields/Discount_Camping_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Discount_Camping_Yes_No__c</fullName>
    <label>Discount Camping (Yes/No)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>