ELS Code/main/default/objects/ELS_Product__c/fields/Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Expire_Date__c</fullName>
    <label>Expire Date</label>
    <type>Date</type>
</CustomField>