ELS Code/main/default/objects/ELS_Product__c/fields/Free_Trial_Days__c.field-meta.xml
<CustomField>
    <fullName>Free_Trial_Days__c</fullName>
    <label>Free Trial Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>