ELS Code/main/default/objects/ELS_Product__c/fields/Lazydays_Nights_Used__c.field-meta.xml
<CustomField>
    <fullName>Lazydays_Nights_Used__c</fullName>
    <label>Lazydays Nights Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>