ELS Code/main/default/objects/ELS_Product__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LZ14</fullName>
            </value>
            <value>
                <fullName>LZEX</fullName>
            </value>
            <value>
                <fullName>LZMP</fullName>
            </value>
            <value>
                <fullName>LZRR</fullName>
            </value>
            <value>
                <fullName>LZUX</fullName>
            </value>
            <value>
                <fullName>LZYH</fullName>
            </value>
            <value>
                <fullName>LZYP</fullName>
            </value>
            <value>
                <fullName>AZ60</fullName>
            </value>
            <value>
                <fullName>FQ15</fullName>
            </value>
            <value>
                <fullName>GICO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>