ELS Code/main/default/objects/ELS_Product__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <label>Product Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready Camp Go - Gold</fullName>
            </value>
            <value>
                <fullName>Ready Camp Go - Platinum</fullName>
            </value>
            <value>
                <fullName>Ready Camp Go - Plus</fullName>
            </value>
            <value>
                <fullName>Ready Camp Go - Silver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>