ELS Code/main/default/objects/ELS_Product__c/fields/Proof_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proof of Sale</label>
    <type>Checkbox</type>
</CustomField>