ELS Code/main/default/objects/ELS_Product__c/fields/RCG_Number__c.field-meta.xml
<CustomField>
    <fullName>RCG_Number__c</fullName>
    <externalId>true</externalId>
    <label>RCG Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>