ELS Code/main/default/objects/ELS_Product__c/fields/RV_Source_Code__c.field-meta.xml
<CustomField>
    <fullName>RV_Source_Code__c</fullName>
    <label>RV Source Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>