ELS Code/main/default/objects/ELS_Product__c/fields/Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_ID__c</fullName>
    <label>Source ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>