ELS Code/main/default/objects/ELS_Product__c/recordTypes/Discount_Camping.recordType-meta.xml
<RecordType>
    <fullName>Discount_Camping</fullName>
    <active>true</active>
    <label>Discount Camping</label>
</RecordType>