ELS Code/main/default/objects/ELS_Product__c/recordTypes/Free_Trials.recordType-meta.xml
<RecordType>
    <fullName>Free_Trials</fullName>
    <active>true</active>
    <label>Free Trials</label>
</RecordType>