ELS Code/main/default/objects/ELS_Product__c/recordTypes/Ready_Camp_Go.recordType-meta.xml
<RecordType>
    <fullName>Ready_Camp_Go</fullName>
    <active>true</active>
    <label>Ready Camp Go</label>
</RecordType>