ELS Code/main/default/objects/ELS_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Client_ID__c</columns>
    <columns>Client_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ELS_Product__c.Discount_Camping</value>
    </filters>
    <label>All</label>
</ListView>